--- a/Tp3_Romulo/Tp3_Romulo/Tp3_Romulo.csproj
+++ b/Tp3_Romulo/Tp3_Romulo/Tp3_Romulo.csproj
@@ -270,6 +270,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Pessoa\Details.cshtml" />
     <Content Include="Views\Pessoa\Index.cshtml" />
     <Content Include="Views\Pessoa\Create.cshtml" />
   </ItemGroup>
