--- a/Tp3_Romulo/Tp3_Romulo/Tp3_Romulo.csproj
+++ b/Tp3_Romulo/Tp3_Romulo/Tp3_Romulo.csproj
@@ -273,6 +273,7 @@
     <Content Include="Views\Pessoa\Details.cshtml" />
     <Content Include="Views\Pessoa\Index.cshtml" />
     <Content Include="Views\Pessoa\Create.cshtml" />
+    <Content Include="Views\Pessoa\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
